add placeholder for task_url box

--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -21,7 +21,7 @@
 	<div class="addtask_up">
 	<div class="l">任务下载地址</div>
 	<div class="r">
-        <input type="text" name="url" id="task_url" value="" style="width:230px;border-right:none;" onkeyup="on_url_change();" onPaste="on_url_change();" />
+        <input type="text" name="url" id="task_url" value="" placeholder="HTTP, ED2K or Magnet" style="width:230px;border-right:none;" onkeyup="on_url_change();" onPaste="on_url_change();" />
         <div class="bt_file">
           <input type="file" name="btfile" class="file" onchange="on_file_change();" />
           <div class="fake_button">
