task list style update

--- a/templates/task_list.html
+++ b/templates/task_list.html
@@ -11,14 +11,25 @@
       <span class="date">{{ task.createtime.strftime("%Y-%m-%d") }}</span>
   </div>
   <div class="clearfix"></div>
-  <div class="ext-info" style="display: none;">
-      {% set uploader_id = email2id(task.creator) %}
-      {% if (uploader_id and uploader_id == current_user_id) or isadmin %}<a href="/edit?task_id={{ task.id }}" class="edit-button iframe"> <div class="task-button"> 编辑 </div></a>{% end %}
-      <span class="uploader">UP主: {% if uploader_id %}<a href="/uploader/{{ uploader_id }}">{% end %}{{ email2name(task.creator) or task.creator or "unknow" }}{% if uploader_id %}</a>{% end %}</span>
+  <div class="task-item task-item-hover hidden" data-task-id="{{ task.id }}">
+    <div class="process-bar {{ task.status }}" style="width: {{ 100-task.process }}%"></div>
+    <a class="get-lixian-url iframe" href="/get_lixian_url?task_id={{ task.id }}" target="_blank" title="{{ task.taskname }}">
+        <div class="tname"><span class="p1">{% if task.invalid %}* {% end %}{{ len(task.taskname) > 15 and task.taskname[:-15] or task.taskname }}</span><span class="p2">{{ len(task.taskname) > 15 and task.taskname[-15:] or "" }}</span></div>
+    </a>
+    <div class="info">
+        <span class="file-size">{{ format_size(task.size) }}</span>
+        <span class="date">{{ task.createtime.strftime("%Y-%m-%d") }}</span>
+    </div>
+    <div class="clearfix"></div>
+    <div class="ext-info">
+        {% set uploader_id = email2id(task.creator) %}
+        {% if (uploader_id and uploader_id == current_user_id) or isadmin %}<a href="/edit?task_id={{ task.id }}" class="edit-button iframe"> <div class="task-button"> 编辑 </div></a>{% end %}
+        <span class="uploader">UP主: {% if uploader_id %}<a href="/uploader/{{ uploader_id }}">{% end %}{{ email2name(task.creator) or task.creator or "unknow" }}{% if uploader_id %}</a>{% end %}</span>
       
-      <span class="tags">TAGS: {% raw modules.TagsModule(task.tags) %}</span>
+        <span class="tags">TAGS: {% raw modules.TagsModule(task.tags) %}</span>
+    </div>
+    <div class="clearfix"></div>
   </div>
-  <div class="clearfix"></div>
 </li>
 {% end %}
 {% if tasks %}
@@ -26,9 +37,10 @@
   $(".get-lixian-url").fancybox({width: 700});
   $(".edit-button").fancybox({ width: 700 , height: 250});
   $(".task-item").hover(function() {
-    $(this).find(".ext-info").delay(250).show(1);
+    $(this).find(".task-item-hover").show();
+    resize_item($(this).find(".task-item-hover .tname").get(0));
   }, function() {
-    $(this).find(".ext-info").stop(true, true).hide();
+    $(this).find(".task-item-hover").hide();
   });
 </script>
 {% end %}
