--- a/templates/front.html
+++ b/templates/front.html
@@ -5,6 +5,9 @@
 <script> !window.jQuery && document.write('<script type="text/javascript" src=\"{{static_url("js/jquery-1.4.3.min.js")}}\"><\/script>'); </script>
 <script type="text/javascript" src="{{static_url('js/fancybox/jquery.fancybox-1.3.4.pack.js')}}"></script>
 <link rel="stylesheet" href="{{static_url('js/fancybox/jquery.fancybox-1.3.4.css')}}" type="text/css" media="screen" />
+<style>
+body { min-width: 990px; }
+</style>
 {% block more_head %}{% end %}
 {% end %}
 
