--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -157,13 +157,13 @@ $(document).ready(function(){
   })
 
   if (localStorage) {
-    var custom = '<a id="custom-button" title="双击编辑" href="javascript:LE.custom();"><div class="task-button">'+(LE.custom_script && LE.custom_script.name || '自定义')+'</div></a>';
+    var custom = '<a id="custom-button" title="右键点击编辑" href="javascript:LE.custom();"><div class="task-button">'+(LE.custom_script && LE.custom_script.name || '自定义')+'</div></a>';
     if (LE.custom_script) {
       $("#batch-links").prepend(custom);
     } else {
       $("#batch-links").append(custom);
     }
-    $("#custom-button").dblclick(function() {
+    $("#custom-button").bind("contextmenu", function() {
       LE.show(LE.custom_script && LE.custom_script.toString() || LE.default_script.toString());
       $("#tip").text("保存");
       $("#tip").click(function() {
@@ -174,6 +174,7 @@ $(document).ready(function(){
           LE.custom_script = undefined;
         $("#tip").unbind();
       });
+      return false;
     });
   }
 
