rewrite userscript without the support of GM_*

--- a/templates/info.html
+++ b/templates/info.html
@@ -3,9 +3,9 @@
   <dt>
   <div class="important">下载安装UserScript支持插件。</div>
   <div>
-      <b>Firefox:</b> <a href="https://addons.mozilla.org/zh-CN/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a> / <a href="https://addons.mozilla.org/zh-CN/firefox/addon/scriptish/" target="_blank">Scriptish</a><br />
-      <b>Chrome:</b> <a href="https://chrome.google.com/webstore/detail/dhdgffkkebhmkfjojejmpbldmpobfkfo" target="_blank">Tampermonkey</a> <br />
+      <b>Firefox:</b> <a href="https://addons.mozilla.org/zh-CN/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a> 或 <a href="https://addons.mozilla.org/zh-CN/firefox/addon/scriptish/" target="_blank">Scriptish</a><br />
       <b>Safari:</b> <a href="http://d.hatena.ne.jp/os0x/20100612/1276330696" target="_blank">NinjaKit</a> <br />
+      <b>Chrome:</b> 直接安装 <br />
   </div>
   </dt>
   <dd>2.</dd>
@@ -13,7 +13,7 @@
   <div class="important">下载安装 跨站Cookie</div>
   <div><a href="{{ options.cross_userscript }}" target="_blank">UserScirpt</a> / <a href="{{ options.cross_userscript_local }}" target="_blank">本地安装</a></div>
   <a href="{{ options.cross_userscript }}" target="_blank" class="cross-cookie" data-version="{{ options.cross_cookie_version }}" style="padding: 3px; margin: 5px 0;">需要安装/升级</a>
-  <div><a href="#disabled_cross_cookie" id="disable_user_script">我无须使用浏览器下载功能</a></div>
+  <div><b><a href="#disabled_cross_cookie" id="disable_user_script">我无须使用浏览器下载功能</a></b></div>
   </dt>
   <dd>3.</dd>
   <dt>
