--- a/templates/share.html
+++ b/templates/share.html
@@ -111,11 +111,11 @@
   <a href="#disabled_cross_cookie" id="disable-helper"></a>
   <div id="disabled_cross_cookie">
     <dl>
-      <dd>您已经禁用或尚未安装跨站Cookie脚本，无法使用浏览器直接下载。</dd>
+      <dd>Cookie尚未写入成功，无法使用浏览器直接下载。</dd>
       <dt>
         <ul>
           <li><a href="javascript:$.fancybox.close();">好吧，我使用批量下载功能下载</a></li>
-          <li><a href="{{ options.cross_userscript }}" target="_blank">我要使用浏览器直接下载资源</a></li>
+          <li><a href="{{ options.cross_userscript }}" target="_blank">我尚未安装cross-cookie脚本</a></li>
         </ul>
       </dt>
     </dl>
@@ -174,12 +174,12 @@
   $("#wget-button").fancybox({onStart: LE.wget_links});  
   $("#aria2-button").fancybox({onStart: LE.aria2_links});  
   $("#disable-helper").fancybox();
-  {% if handler.disabled_userjs() %}
-  $(".share-file-title").click(function() {
-    $("#disable-helper").click();
-    return false;
-  });
-  {% end %}
+  if (document.cookie.indexOf("xss=") == -1) {
+    $(".share-file-title > a").click(function() {
+        $("#disable-helper").click();
+        return false;
+    });
+  }
   {% if options.using_xss %}
   document.write('<script type="text/javascript" src="/xssjs"><\/script>');
   {% end %}
