--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -4,7 +4,7 @@
 {% block desc %}{% if task.tags %}TAGS:{{ ", ".join(task.tags) }}{% end %} UP主:{{ email2name(task.creator) or task.creator or "unknow" }}{% end %}
 
 {% block head %}
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 <script> !window.jQuery && document.write('<script type="text/javascript" src=\"{{static_url("js/jquery-1.4.3.min.js")}}\"><\/script>'); </script>
 <script type="text/javascript" src="{{static_url('js/fancybox/jquery.fancybox-1.3.4.pack.js')}}"></script>
 <script src="http://pstatic.xunlei.com/js/base64.js"></script>
@@ -53,7 +53,7 @@
 {% end %}
 
   <div class="task-info">
-      
+
       <div class="task-name">
         <input type="checkbox" id="toggle" checked="true" />
         <span id="title"> {{ task.taskname }} </span>
